<resources>
    <string name="app_name">Sales Automation</string>

    <!--C-->
    <!--Implies Solutions-->
    <!--Albakio International-->
    <!--Cantab Publisher-->
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    //Activity Titles
    <string name="login">Login</string>
    <string name="dashboard">Main Menu</string>
    <string name="visit_report">Visit Report</string>
    <string name="school_form">Vendor Registration Form</string>
    <string name="shop_form">Shop Registration Form</string>
    <string name="map_view">Daily Activity Map View</string>
    <string name="my_visits">My Visits</string>
    <string name="reminders">Reminders</string>
    <string name="map_routes">Map Routes</string>
    <string name="test_fragment">Daily Attendance</string>
    <string name="change_passowrd_view">Change Password</string>
    <string name="next_week_visit_plan">Set Next Week Visit Plan</string>
    <string name="get_next_week_visit_plan">Get Next Week Visit Plan</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_404">404\n Even the things we love break sometimes,thanks for your patience while we put the pieces back together. Please contact support if the issue persists</string>
    <string name="global_network_fail">Communication with server failed, please try again.</string>
    <string name="global_network_unknown_host">Cannot establish a connection to the server, please try again.</string>
    <string name="global_network_not_found">Resource not found, please try again.</string>
    <string name="global_network_timeout">Slow internet connection or Server is currently not responding, please try again.</string>
    <string name="global_network_error">An error occurred, please try again.</string>
    <string name="global_network_no_data">Unexpected response from server.</string>
    <string name="progressbar_default_msg">Please wait...</string>
    <string name="str_no_internet">Check internet service and try again</string>
    <string name="app_force_close">App will close after updating Base URL and You need to login again with internet connection ON</string>

    //permissions strings
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="camera_pemission_never_ask">Camera permission was denied with never ask again. Please allow permission manually!!</string>
    <string name="location_pemission_never_ask">Location permission was denied with never ask again. Please allow permission manually!!</string>
    <string name="camera_permission_denied">Camera permission denied by user</string>
    <string name="location_permission_denied">Location permission denied by user</string>
    <string name="camera_permission_rational">Camera permission is needed to show the camera preview.</string>
    <string name="location_permission_rational">Location permission is needed to get you location.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="school_registration">School Registration</string>
    <string name="login_detail">Online Attendace</string>
    <string name="shop_registration">Shop Registration</string>
    <string name="activity_visit_details">Activity / Visit Details</string>
    <string name="reset_location">Reset Location</string>
    <string name="daily_activity_map_view">Daily Activity Map view</string>
    <string name="remember_me">Remember Me</string>
    <string name="select_items">Select Items</string>
    <string name="select_Syllabus">Select Syllabus</string>
    <string name="select_Sellers">Select Shops</string>
    <string name="selected_items">Selected Items</string>
    <!--    <string name="google_maps_key">AIzaSyDE1GeiS9RwcTckgs5Kl8J0M1bt55OHlv8</string>-->
    <!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDjxf-SlaQbUnH9CJJfTAdFTzY-ufZlT8g</string>-->

    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="information">Information</string>
    <string name="check_in">Check In</string>
    <string name="item">Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_code">Item Code</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="books">Books</string>
    <string name="customer_name">Customer Name</string>
    <string name="school_name">School Name</string>
    <string name="visit_time">Visit time</string>
    <string name="remarks">Remarks</string>
    <string name="enter_dev_code">Enter Dev Code</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="dev_label">Enter code to activate dev mode</string>
    <string name="update_base_url">Update Base URL</string>
    <string name="start_typing_url">Start typing URL...</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="update">UPDATE</string>
    <string name="employee_name">Employee Name</string>
    <string name="select_region">Select Region</string>
    <string name="select_customer">Area Wise Vendors</string>
    <string name="reschedule"> Reschedule</string>
    <string name="delete">Delete</string>
    <string name="title_activity_maps">Map</string>
    <string name="digits_number">1234567890</string>

    <string name="enter_plan_details">Enter Plan Detail</string>
    <string name="update_plan_details">Update Plan Detail</string>


    <string name="service_already_running">Service is already running</string>
    <string name="service_start_successfully">Service started successfully</string>
    <string name="gps_enable">GPS enable</string>
    <string name="please_turn_on_gps">Please turn on GPS</string>


    <string name="background_location_permission_message">
       <b>Allow only while using the app</b> permission has been granted. If you want
        to get location updates in the background even when not using the app then grant
        <b>Allow all the time</b> permission
    </string>
    <string-array name="country_list">
        <item>PAKISTAN</item>
        <item>UNITED ARAB EMIRATES</item>
        <item>OMAN</item>
        <item>QATAR</item>
        <item>INDONESIA</item>
        <item>EGYPT</item>
        <item>JORDAN</item>
        <item>BANGLADESH</item>
        <item>SRILANKA</item>
        <item>KUWAIT</item>
        <item>BAHRAIN</item>
        <item>UNITED KINGDOM</item>
        <item>JAPAN</item>
    </string-array>
    <string-array name="working_priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

</resources>
