<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".dialoge.DetailsDialogFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp"
            android:background="@drawable/round_signin_btn"
            android:gravity="center"
            android:padding="@dimen/margin_5dp"
            android:text="@string/information"
            android:textColor="#ffffff"
            android:textSize="@dimen/font_25"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_title_vendor_rype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="Select Vendor Type"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_16"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/rl_vendor_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_vendor_rype"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:background="@drawable/spinner_bg"
                android:visibility="visible">

                <Spinner
                    android:id="@+id/spVendorType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black" />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/select_region"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_16"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="@dimen/spn_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_20dp"
            android:layout_weight=".28"
            android:background="@drawable/spinner_bg"
            android:orientation="horizontal"

            >

            <Spinner
                android:id="@+id/spn_region"
                style="@style/spinnerTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:spinnerMode="dropdown" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="Select City"
            android:textColor="@color/colorPrimary"

            android:textSize="@dimen/font_16"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="@dimen/spn_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_20dp"
            android:layout_weight=".28"
            android:background="@drawable/spinner_bg"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spn_city"
                style="@style/spinnerTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:spinnerMode="dropdown"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_weight=".28"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:visibility="gone">

            <TextView
                android:id="@id/tv_title_sp_zone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:text="Select zone"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_16"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_sp_zone"
                android:layout_marginTop="8dp"
                android:background="@drawable/spinner_bg"
                android:orientation="horizontal"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/sp_zone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="Select Area"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_16"

            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl_region_areas"
            android:layout_width="@dimen/spn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_3dp"
            android:background="@drawable/spinner_bg"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spn_pop_area"
                style="@style/spinnerTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"

                android:spinnerMode="dropdown"
                android:visibility="gone" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_sub_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_weight=".28"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@id/tv_title_sp_sub_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:text="Select Sub Area"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_16"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_sp_sub_area"
                android:background="@drawable/spinner_bg"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/sp_sub_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title_areawise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/select_customer"
            android:textColor="@color/colorPrimary"

            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rl_region_customers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_20dp"
            android:layout_weight=".28"
            android:background="@drawable/spinner_bg"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spn_customers"
                style="@style/spinnerTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"

                android:spinnerMode="dropdown"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnCheckIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20dp"
            android:background="@drawable/commentedittxt_bg"
            android:text="@string/check_in"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>